# hasdb

./: .gitignore  README.md  brittany.yaml  cabal.project  default.nix  shell.nix
Tour/: basics.edh  blank.edh  boIndex.edh  client-app.edh  client-cli.edh  client.edh  collections.edh  debug.edh  embedded.edh  index.edh  pressure.edh  server-shutdown.edh  server.edh
edh_modules/db/: RT.edh  __init__.edh  __main__.edh  client.edh  ehi.edh  machinery.edh  options.edh  server.edh
edh_modules/db/client/: __main__.edh
edh_modules/db/demo/: app.edh  basics.edh  blank.edh  client.edh  embedded.edh  pressure.edh  schema.edh  server.edh
edh_modules/db/demo/server/: __main__.edh
edh_modules/db/ncs/: __main__.edh
edh_modules/db/scon/: __main__.edh
edh_modules/db/server/: __main__.edh
edh_modules/demo/: basics.edh  blank.edh
hasdb/: .gitignore  hasdb.cabal
hasdb/pub/DB/: Batteries.hs  EHI.hs
hasdb/repl/: Main.hs  Repl.hs
hasdb/src/: Main.hs  Repl.hs
hasdb/src/DB/: Array.hs  DataWorld.hs  RT.hs  Vector.hs
hasdb/src/DB/Array/: MMap.hs
hasdb/src/DB/Comm/: MicroProto.hs  Peer.hs  Server.hs
hasdb/src/DB/Storage/: DataDir.hs  Idx.hs  InMem.hs
hasdb/src/DB/Storage/InMem/: TreeIdx.hs
