cabal-version: 2.4
name: hasdb
version: 0.1.0
license: BSD-3-Clause
copyright: 2019 Compl Yue
maintainer: compl.yue@icloud.com
author: Compl Yue
stability: experimental
homepage: https://github.com/e-wrks/hasdb
bug-reports: https://github.com/e-wrks/hasdb/issues
synopsis: Haskell Native Database
description:
    Please see the README on Github at <https://github.com/e-wrks/hasdb>
category: Concurrent,Database
build-type: Simple
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/e-wrks/hasdb

library
    exposed-modules:
        DB.Batteries
    hs-source-dirs: pub
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude OverloadedStrings LambdaCase
                        BangPatterns TupleSections ScopedTypeVariables
    ghc-options: -Wall
    build-depends:
        hasdb-internal -any,
        base >=4.12,
        stm >=2.5,
        text -any,
        bytestring -any,
        mtl -any,
        transformers -any,
        edh -any

executable hasdb
    main-is: Main.hs
    hs-source-dirs: repl
    other-modules:
        Repl
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude OverloadedStrings LambdaCase
                        BangPatterns TupleSections ScopedTypeVariables
    ghc-options: -Wall -threaded
    build-depends:
        hasdb -any,
        base >=4.12,
        stm >=2.5,
        text -any,
        bytestring -any,
        mtl -any,
        transformers -any,
        edh -any,
        lossless-decimal -any

library hasdb-internal
    exposed-modules:
        DB.RT
        DB.Vector
        DB.Array
        DB.Array.MMap
        DB.Comm.Server
        DB.Comm.Peer
        DB.Comm.MicroProto
        DB.Storage.InMem
        DB.Storage.InMem.TreeIdx
        DB.Storage.DataDir
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions: NoImplicitPrelude OverloadedStrings LambdaCase
                        BangPatterns TupleSections ScopedTypeVariables
    ghc-options: -Wall
    build-depends:
        base >=4.12,
        stm >=2.5,
        edh -any,
        lossless-decimal -any,
        scientific -any,
        binary -any,
        filepath -any,
        directory -any,
        hashable -any,
        unordered-containers -any,
        containers -any,
        primitive >= 0.2.1,
        vector >= 0.5,
        mmap >= 0.5.4,
        unix -any,
        time -any,
        clock -any,
        network -any,
        text -any,
        bytestring -any,
        mtl -any,
        transformers -any,
        neat-interpolation -any
